Code quality for the unit tests improved.