@@ -3,13 +3,14 @@ package dev.vdrenkov.cineledger.mappers;
 import dev.vdrenkov.cineledger.models.dtos.CategoryDto;
 import dev.vdrenkov.cineledger.testutil.constants.CategoryConstants;
 import dev.vdrenkov.cineledger.testutil.factories.CategoryFactory;
-import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.util.List;
+
+import static org.junit.Assert.assertEquals;
 
 /**
  * Tests category mapper behavior.
@@ -28,9 +29,9 @@ class CategoryMapperTest {
         List<CategoryDto> categoryDtos = categoryMapper.mapCategoryToCategoryDtoList(
             CategoryFactory.getDefaultCategoryList());
 
-        final CategoryDto categoryDto = categoryDtos.get(0);
-        Assertions.assertEquals(categoryDto.getId(), CategoryConstants.ID);
-        Assertions.assertEquals(categoryDto.getName(), CategoryConstants.NAME);
+        final CategoryDto categoryDto = categoryDtos.getFirst();
+        assertEquals(CategoryConstants.ID, categoryDto.getId());
+        assertEquals(CategoryConstants.NAME, categoryDto.getName());
     }
 
     /**
@@ -40,8 +41,8 @@ class CategoryMapperTest {
     void testMapCategoryToCategoryDto_success() {
         final CategoryDto actualDto = categoryMapper.mapCategoryToCategoryDto(CategoryFactory.getDefaultCategory());
 
-        Assertions.assertEquals(actualDto.getId(), CategoryConstants.ID);
-        Assertions.assertEquals(actualDto.getName(), CategoryConstants.NAME);
+        assertEquals(CategoryConstants.ID, actualDto.getId());
+        assertEquals(CategoryConstants.NAME, actualDto.getName());
     }
 }
 
