@@ -3,12 +3,11 @@ package dev.vdrenkov.cineledger.mappers;
 import dev.vdrenkov.cineledger.models.dtos.DiscountDto;
 import dev.vdrenkov.cineledger.testutil.constants.DiscountConstants;
 import dev.vdrenkov.cineledger.testutil.factories.DiscountFactory;
-import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.Assert.assertEquals;
 
 /**
  * Tests discount mapper behavior.
@@ -23,10 +22,10 @@ class DiscountMapperTest {
     void testMapDiscountToDiscountDto_success() {
         final DiscountDto discountDto = discountMapper.mapDiscountToDiscountDto(DiscountFactory.getDefaultDiscount());
 
-        Assertions.assertEquals(discountDto.getId(), DiscountConstants.ID);
-        Assertions.assertEquals(discountDto.getType(), DiscountConstants.TYPE);
-        Assertions.assertEquals(discountDto.getCode(), DiscountConstants.CODE);
-        Assertions.assertEquals(discountDto.getPercentage(), DiscountConstants.PERCENTAGE);
+        assertEquals(DiscountConstants.ID, discountDto.getId());
+        assertEquals(DiscountConstants.TYPE, discountDto.getType());
+        assertEquals(DiscountConstants.CODE, discountDto.getCode());
+        assertEquals(DiscountConstants.PERCENTAGE, discountDto.getPercentage());
     }
 
     /**
@@ -34,15 +33,15 @@ class DiscountMapperTest {
      */
     @Test
     void testMapDiscountListToDiscountDtoList_success() {
-        List<DiscountDto> discountDtos = discountMapper.mapDiscountListToDiscountDtoList(
+        final List<DiscountDto> discountDtos = discountMapper.mapDiscountListToDiscountDtoList(
             DiscountFactory.getDefaultDiscountList());
 
         assertEquals(1, discountDtos.size());
-        final DiscountDto discountDto = discountDtos.get(0);
-        Assertions.assertEquals(discountDto.getId(), DiscountConstants.ID);
-        Assertions.assertEquals(discountDto.getType(), DiscountConstants.TYPE);
-        Assertions.assertEquals(discountDto.getCode(), DiscountConstants.CODE);
-        Assertions.assertEquals(discountDto.getPercentage(), DiscountConstants.PERCENTAGE);
+        final DiscountDto discountDto = discountDtos.getFirst();
+        assertEquals(DiscountConstants.ID, discountDto.getId());
+        assertEquals(DiscountConstants.TYPE, discountDto.getType());
+        assertEquals(DiscountConstants.CODE, discountDto.getCode());
+        assertEquals(DiscountConstants.PERCENTAGE, discountDto.getPercentage());
     }
 }
 
