@@ -3,13 +3,14 @@ package dev.vdrenkov.cineledger.mappers;
 import dev.vdrenkov.cineledger.models.dtos.ItemDto;
 import dev.vdrenkov.cineledger.testutil.constants.ItemConstants;
 import dev.vdrenkov.cineledger.testutil.factories.ItemFactory;
-import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.util.List;
+
+import static org.junit.Assert.assertEquals;
 
 /**
  * Tests item mapper behavior.
@@ -27,10 +28,10 @@ class ItemMapperTest {
     void testMapItemToItemDto_success() {
         final ItemDto itemDto = itemMapper.mapItemToItemDto(ItemFactory.getDefaultItem());
 
-        Assertions.assertEquals(itemDto.getId(), ItemConstants.ID);
-        Assertions.assertEquals(itemDto.getName(), ItemConstants.NAME);
-        Assertions.assertEquals(itemDto.getPrice(), ItemConstants.PRICE, 0.0);
-        Assertions.assertEquals(itemDto.getQuantity(), ItemConstants.QUANTITY);
+        assertEquals(ItemConstants.ID, itemDto.getId());
+        assertEquals(ItemConstants.NAME, itemDto.getName());
+        assertEquals(ItemConstants.PRICE, itemDto.getPrice(), 0.0);
+        assertEquals(ItemConstants.QUANTITY, itemDto.getQuantity());
     }
 
     /**
@@ -40,11 +41,11 @@ class ItemMapperTest {
     void testMapItemToItemDtoList_success() {
         final List<ItemDto> itemDtos = itemMapper.mapItemToItemDtoList(ItemFactory.getDefaultItemList());
 
-        final ItemDto itemDto = itemDtos.get(0);
-        Assertions.assertEquals(itemDto.getId(), ItemConstants.ID);
-        Assertions.assertEquals(itemDto.getName(), ItemConstants.NAME);
-        Assertions.assertEquals(itemDto.getPrice(), ItemConstants.PRICE, 0.0);
-        Assertions.assertEquals(itemDto.getQuantity(), ItemConstants.QUANTITY);
+        final ItemDto itemDto = itemDtos.getFirst();
+        assertEquals(ItemConstants.ID, itemDto.getId());
+        assertEquals(ItemConstants.NAME, itemDto.getName());
+        assertEquals(ItemConstants.PRICE, itemDto.getPrice(), 0.0);
+        assertEquals(ItemConstants.QUANTITY, itemDto.getQuantity());
     }
 }
 
